# AIUB-Backup

./: .gitattributes  .gitignore  6param.ipynb  DISCOS_plots.ipynb  ML_tests.ipynb  README.md  archive.py  calculations.py  celmech_circ_vs_ell.ipynb  cluster_finder.py  cluster_plotter.py  desktop.ini  from_tle_to_lis.py  getdata.py  main_celmech.py  main_celmech_2.py  main_celmech_old.py  main_frag_and_rest.py  observations_magcut.ipynb  plotting.py  simulations_magcut.ipynb  simulations_magcut_newpop.ipynb  simulations_propagate.ipynb  simulations_quarterly_compare_with_ESA.ipynb  simulations_th2.5.ipynb  simulations_th3.ipynb  sort_aut_file_by_month.py  sortdata.py  tables.py  test_unique_alg.ipynb
DISCOS/: compare_DISCOS_data.ipynb  populations_08_2024.txt  populations_11_2016.txt
TLE_files/: GEO2024.lis  GEO2024.tle  latest_tle_2024.lis  latest_tle_2024.tle
archive/: archive.py
circular_orbit_problem/: celmech_circ_vs_ell.ipynb  main_celmech_2.py
clustering/: DBCV_score_tests.ipynb  DBSCAN.py  DBSCAN_large_parameter_tuning.ipynb  DENCLUE.py  HDBSCAN.py  IAC_followup.ipynb  ML_tests.ipynb  OPTICS.py  binning_width.ipynb  cluster_data.py  cluster_data_5d.py  cluster_data_5d_v0.py  cluster_data_a.py  cluster_data_cospar.py  cluster_data_ecc.py  cluster_data_mag.py  cluster_data_pca.py  cluster_data_pca_08072025.py  cluster_plotter.py  clustering_results.tex  clustering_utils.py  clustering_utils_5d.py  clustering_utils_5d_v0.py  clustering_utils_a.py  clustering_utils_cospar.py  (+34 more)
clustering/my_dbcv_module/: Cargo.toml
clustering/my_dbcv_module/src/: lib.rs
(+1883 files in other folders)
